front: 🥀 Frontend is done; next in front: 🔗 links and functionality; next: 👺 Fuck, I need to refactor this code, not to make it more complex

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -10,35 +10,18 @@
 
     "hero": {
       "title": "Мы пытаемся сделать Интернет немного другим...",
-      "subtitle": "😎 У нас так же есть ох*енный слоган: 'дедлайн для быдло'",
+      "subtitle": "😎 У нас так же есть ох*енный слоган: 'дедлайн для быдла'",
 
       "more": "Узнать больше",
       "register": "📮 Подписаться на новости"
     },
 
     "projects": {
-      "title": "Наши проекты",
-      
-      "toSite": "Перейти на сайт",
-      "more": "Узнать больше",
+      "title": "Наши сервисы/проекты",
 
-      "list": {
-        "bokkr": {
-          "title": "bokkr",
-          "subtitle": "Электронные книги и комиксы нового уровня.",
-          "description": "bokkr - это сервис интеркативных книг и комиксов. Это полностью эксперементальный сервис, который всё ещё в разработке. Мы не знаем, что мы будем делать, как мы это будет делать, но очень надеемся на ваши идеи! Любую вашу идею, если она популярна, мы будет"
-        },
-        "pigeon": {
-          "title": "pigeon messenger",
-          "subtitle": "Мессенджер, который соединяет все остальные",
-          "description": "pigeon messenger - это тоже довольно-таки эксперементальный проект. В этом проект мы хотим соединить все известные мессенджеры и социальные сети в одну. Именно соединить, а не что-то другое. Надеемся что у нас хоть что-то получится..."
-        }, 
-        "unicorn": {
-          "title": "Unicorn Social",
-          "subtitle": "Социальная сеть, управляемая пользователями. В прямом смысле.",
-          "description": "Unicorn Social - это социальная сеть, которую 'разрабатывают' её пользователи. Она, вероятнее всего, скоро будет доступна. Как она работает? Каждые 4 дня разработчики сервиса выбирать по три идеи от пользователей, и выполняют их! И да, даже Вы сможете оставить свою идею, и, возможно, она станет реальностью! P.S. Выполняем абсолютно любые идеи, какими бы они не были бы."
-        }
-      }
+      "developers": "Для разработчиков",
+
+      "soon": "Скоро..."
     }
   },
   "loginPage": {
