front: Changed locales picker. next: User account page and other things

--- a/locales/eu-ru.json
+++ b/locales/eu-ru.json
@@ -33,6 +33,18 @@
     "language": "Язык сайта"
   },
 
+  "projects": {
+    "promotions": {
+      "bokkr": "bokkr - экспериментальный сайт, на котором есть только качественные комиксы и книги! Огромное количество интересных экспериментов, ну и огромное количество незабываемых историй и приключений!",
+      "pigeon": "Pigeon Messenger - мессенджер, который соединяет все известные и популярные мессенджеры и соц. сети в один! Довольно-таки эксперементальная штука, но очень интересная.",
+      "paradise": "пользовательские приложения",
+      "userApps": {
+        "title": "user apps",
+        "description": "Огромное количество приложений, которые создают сами пользователи. Ну а что тут ещё говорить?"
+      }
+    }
+  },
+
   "loginPage": {
     "promo": {
       "title": "Зарегистрируйтесь, что бы получить доступ к:",
