Redesigned all site and changed domain.

--- a/locales/eu-ru.json
+++ b/locales/eu-ru.json
@@ -1,8 +1,4 @@
 {
-  "states": {
-    "frozen": "Заморожен"
-  },
-
   "account": {
     "wip": "Идёт разработка.",
     "home": "Вернуться домой"
@@ -11,8 +7,6 @@
   "landing": {
     "title": "Портал",
     "header": {
-      "about": "Про нас",
-      "projects": "Проекты",
       "contact": "Связаться"
     },
     "account": "Перейти в Мой аккаунт",
@@ -50,70 +44,12 @@
     }
   },
 
-  "titles": {
-    "portal": "Портал"
+  "projectDropdown": {
+    "other": "И так далее...",
+    "more": "Больше на Space"
   },
 
   "languagePicker": {
     "language": "Язык сайта"
-  },
-
-  "projects": {
-    "promotions": {
-      "bokkr": "bokkr - экспериментальный сайт, на котором есть только качественные комиксы и книги! Огромное количество интересных экспериментов, ну и огромное количество незабываемых историй и приключений!",
-      "pigeon": "Pigeon Messenger - мессенджер, который соединяет все известные и популярные мессенджеры и соц. сети в один! Довольно-таки эксперементальная штука, но очень интересная.",
-      "paradise": "пользовательские приложения",
-      "userApps": {
-        "title": "user apps",
-        "description": "Огромное количество приложений, которые создают сами пользователи. Ну а что тут ещё говорить?"
-      }
-    }
-  },
-
-  "loginPage": {
-    "promo": {
-      "title": "Зарегистрируйтесь, что бы получить доступ к:",
-      
-      "bokkr": "bokkr - экспериментальный сайт, на котором есть только качественные комиксы и книги! Огромное количество интересных экспериментов, ну и огромное количество незабываемых историй и приключений!",
-      "pigeon": "Pigeon Messenger - мессенджер, который соединяет все известные и популярные мессенджеры и соц. сети в один! Довольно-таки эксперементальная штука, но очень интересная.",
-      "apps": {
-        "title": "пользовательские приложения",
-        "description": "Огромное количество приложений, которые создают сами пользователи. Ну а что тут ещё говорить?"
-      }
-    },
-
-    "userAgreement": "Продолжая, вы соглашаетесь с нашим Пользовательским Соглашением.",
-    
-    "forgotPincode": "Забыли пинкод?",
-    "differentAccount": "Использовать другой аккаунт",
-
-    "login": "Войти",
-    "register": "Зарегистрироваться",
-    "continue": "Продолжить",
-    
-    "usedEmails": "Последние email'ы",
-    
-    "application": {
-      "continue": "что бы перейти в",
-      "unknown": "Неизвестное Приложение"
-    },
-    "title": {
-      "email": "Напишите ваш email",
-      "pincode": "Напишите ваш пинкод",
-      "username": "Напишите имя пользователя",
-      "checkEmail": "Проверьте ваш e-mail",
-      "redirect": "Должны ли мы продолжить?"
-    },
-    "errors": {
-      "invalidPincode": "Неверный пинкод",
-      "wrongEmail": "Неправильный email. Попробуйте ещё раз",
-      "serverError": "Ошибка на стороне сервера. Попробуйте позже",
-      "notFound": {
-        "title": "Не найденно",
-        "subtitle": "Запрашиваемый контент не может быть найден. Проверьте правильность вводимых вами данных."
-      }
-    },
-    "home": "На главную страницу",
-    "toLogin": "Вернуться назад"
   }
 }
